# girsLabBackEndEngine

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md
src/: CMakeLists.txt  redcas.dsw  redcas.sln  redcas_2010.sln
src/LicenseControl/: CopyControl.cpp  CopyControl.h  LicenseHandleMgr.cpp  LicenseHandleMgr.h  PredictionTechnologyLog.cpp  PredictionTechnologyLog.h  ReadMe.txt  SyncMutex.cpp  SyncMutex.h  SystemInfo.cpp  SystemInfo.h  licensing.vcxproj  licensing.vcxproj.filters  stdafx.cpp
src/RDATSrvObj/: DistributionManager.cpp  RDATSrvObj.aps  RDATSrvObj.cpp  RDATSrvObj.def  RDATSrvObj.dsp  RDATSrvObj.h  RDATSrvObj.idl  RDATSrvObj.plg  RDATSrvObj.rc  RDATSrvObj.tlb  RDATSrvObj_i.c  RDATSrvObj_p.c  RDATSrvObjps.def  RDATSrvObjps.mk  Redcassrv.cpp  Redcassrv.h  Redcassrv.rgs  StdAfx.h  dlldata.c  resource.h
src/brassweibull/: AdjustAggregateOperator.cpp  AdjustAggregateOperator.h  AdjustWeibullOperator.cpp  AdjustWeibullOperator.h  AllocatingWeibullPrior.cpp  AllocatingWeibullPrior.h  BRASSEngine.cpp  BRASSEngine.h  CMakeLists.txt  LinkedAdjustmentModel.cpp  LinkedAdjustmentModel.h  ProportionalModelOperator.cpp  ProportionalModelOperator.h  ReadMe.txt  WeibullGroupedDataOperator.cpp  WeibullGroupedDataOperator.h  WeibullMeasureFunction.cpp  WeibullMeasureFunction.h  WeibullModelLayout.cpp  WeibullModelLayout.h  WeibullPrior.cpp  WeibullPrior.h  WeibullTestDataOperator.cpp  WeibullTestDataOperator.h  brassweibull.vcproj  brassweibull.vcxproj
src/cephes/: EPHESInterface.cpp  EPHESInterface.h  cephes.dsp  cephes.vcproj  cephes.vcxproj  content.htm  expn.c  mtherr.c
src/core/: BRASSError.cpp  BRASSError.h  BRASSStreams.cpp  BRASSStreams.h  CMakeLists.txt  ConvergenceOperator.cpp  ConvergenceOperator.h  DeviateGenerator.cpp  DeviateGenerator.h  DummyOperator.cpp  DummyOperator.h  GroupedData.cpp  GroupedData.h  JointDensityEstimate.cpp  JointDensityEstimate.h  NetCorrelation.cpp  NetCorrelation.h  NetModel.cpp  NetModel.h  NetOperator.cpp  NetOperator.h  NormalDensityOperator.cpp  NormalDensityOperator.h  ParamArray.cpp  ParamArray.h  QuickSorter.cpp  QuickSorter.h  ReadMe.txt  SliceSampler.cpp  SliceSampler.h  SliceSamplerAids.cpp  SliceSamplerAids.h  TestConditions.cpp  TestConditions.h  TestData.cpp  TestData.h  TimedMeasure.cpp  TimedMeasure.h  WeibullSampleSet.cpp  WeibullSampleSet.h  (+11 more)
src/coverage/: CMakeLists.txt
src/dcdf/: CMakeLists.txt  DCDFLIBInterface.cpp  DCDFLIBInterface.h  cdflib.h  dcdflib.cpp  ipmpar.cpp
src/dcdflib/: DCDFLIBInterface.cpp  DCDFLIBInterface.h  dcdflib.dsp  dcdflib.vcproj  dcdflib.vcxproj
src/general/: BetaDistMLEFunction.cpp  BinnedSampleSpace.cpp  BinnedSpace.cpp  BrentModeFinder.cpp  Distribution.cpp  DistributionPoint.cpp  FitParametricDistribution.cpp  Function.cpp  GaussianQuadratureIntegrator.cpp  HookeMinFinder.cpp  HyperIndex.cpp  Interpretation.cpp  InterpretationSet.cpp  InterpretationSet.h  Matrix.cpp  Matrix.h  MetropolisBetaGenerator.cpp  MetropolisGammaGenerator.cpp  MetropolisGammaGenerator.h  MetropolisGenerator.cpp  MetropolisGenerator.h  MetropolisLNGenerator.cpp  MetropolisLNGenerator.h  MetropolisNormalGenerator.cpp  MetropolisSampler.cpp  MetropolisTLNGenerator.cpp  MinusFunction.cpp  ModeFinder.cpp  Model.cpp  NumericalRecipes.cpp  Parameters.cpp  ParametricDistributionFitter.cpp  RomberIntegrator.cpp  Sample.cpp  SampleSet.cpp  Sampler.cpp  Session.cpp  SimpsonIntegrator.cpp  SimpsonIntegrator.h  Status.cpp  (+8 more)
src/global/: BetaDistMLEFunction.cpp  BetaDistMLEFunction.h  BinnedSampleSpace.cpp  BinnedSampleSpace.h  BinnedSpace.cpp  BinnedSpace.h  BrentModeFinder.cpp  BrentModeFinder.h  CMakeLists.txt  Distribution.cpp  Distribution.h  DistributionPoint.cpp  DistributionPoint.h  Error.h  FitParametricDistribution.cpp  FitParametricDistribution.h  Function.cpp  Function.h  GaussianQuadratureIntegrator.cpp  GaussianQuadratureIntegrator.h  HookeMinFinder.cpp  HookeMinFinder.h  HyperIndex.cpp  HyperIndex.h  Interpretation.cpp  Interpretation.h  InterpretationSet.cpp  Matrix.cpp  Matrix.h  MetropolisBetaGenerator.cpp  MetropolisBetaGenerator.h  MetropolisGammaGenerator.cpp  MetropolisGenerator.cpp  MetropolisGenerator.h  MetropolisLNGenerator.cpp  MetropolisNormalGenerator.cpp  MetropolisNormalGenerator.h  MetropolisSampler.cpp  MetropolisSampler.h  MetropolisTLNGenerator.cpp  (+31 more)
src/homogeneous/: CMakeLists.txt  LogNormalBinomialDistribution.cpp  LogNormalBinomialDistribution.h  LogNormalPoissonDistribution.cpp  LogNormalPoissonDistribution.h  Readme.txt  SimpleHomogeneous.cpp  SimpleHomogeneous.h  SimpleUEUpdater.cpp  SimpleUEUpdater.h  StdAfx.cpp  StdAfx.h  TabularBinomialDistribution.cpp  TabularBinomialDistribution.h  TabularBinomialSupport.cpp  TabularBinomialSupport.h  TabularDistribution.cpp  TabularDistribution.h  TabularIntegrator.cpp  TabularIntegrator.h  TabularLogNormalBinomialIntegrator.cpp  TabularLogNormalBinomialIntegrator.h  TabularLogNormalIntegrator.cpp  TabularLogNormalIntegrator.h  TabularLogNormalPoissonIntegrator.cpp  TabularLogNormalPoissonIntegrator.h  TabularNormalIntegrator.cpp  TabularNormalIntegrator.h  TabularPoissonDistribution.cpp  TabularPoissonDistribution.h  TabularPoissonSupport.cpp  TabularPoissonSupport.h  UniformBinomialDistribution.cpp  UniformBinomialDistribution.h  UniformPoissonDistribution.cpp  UniformPoissonDistribution.h  UpdatedTabularDistribution.cpp  UpdatedTabularDistribution.h  homogeneous.dsp  homogeneous.vcproj  (+1 more)
src/licensing/: LicenseController.cpp  LicenseController.h  RegisterWIN32.cpp  RegisterWIN32.h  StdAfx.cpp  StdAfx.h  licensing.dsp  licensing.vcproj  licensing.vcxproj
src/nonhomog/: NHBetaSampleGenerator.cpp  NHBetaSampleGenerator.h  NHFunction.cpp  NHFunction.h  NHGammaSampleGenerator.cpp  NHGammaSampleGenerator.h  NHInterpretation.cpp  NHInterpretation.h  NHLikelihood.cpp  NHLikelihood.h  NHLikelihoodBetaBinomial.cpp  NHLikelihoodGammaPoisson.cpp  NHLikelihoodGammaPoisson.h  NHLikelihoodLogBinomial.cpp  NHLikelihoodLogBinomial.h  NHLikelihoodLogLog.cpp  NHLikelihoodLogPoisson.cpp  NHLikelihoodLogPoisson.h  NHLogBinomialSupport.cpp  NHModel.cpp  (+36 more)
(+233 files in other folders)
